--- a/DM_02_Hero.ioc
+++ b/DM_02_Hero.ioc
@@ -206,62 +206,65 @@ Dma.USART1_TX.1.SyncSignalID=NONE
 FDCAN1.AutoRetransmission=ENABLE
 FDCAN1.CalculateBaudRateNominal=1000000
 FDCAN1.CalculateTimeBitNominal=1000
-FDCAN1.CalculateTimeQuantumNominal=12.5
+FDCAN1.CalculateTimeQuantumNominal=50.0
 FDCAN1.DataPrescaler=1
 FDCAN1.DataSyncJumpWidth=2
 FDCAN1.DataTimeSeg1=13
 FDCAN1.DataTimeSeg2=2
-FDCAN1.ExtFiltersNbr=4
-FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,AutoRetransmission,ProtocolException,NominalSyncJumpWidth,DataPrescaler,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,ExtFiltersNbr,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2,Mode
+FDCAN1.ExtFiltersNbr=0
+FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,AutoRetransmission,ProtocolException,NominalSyncJumpWidth,DataPrescaler,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,ExtFiltersNbr,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2,Mode,TxFifoQueueMode
 FDCAN1.Mode=FDCAN_MODE_NORMAL
 FDCAN1.NominalPrescaler=1
 FDCAN1.NominalSyncJumpWidth=20
-FDCAN1.NominalTimeSeg1=59
-FDCAN1.NominalTimeSeg2=20
+FDCAN1.NominalTimeSeg1=14
+FDCAN1.NominalTimeSeg2=5
 FDCAN1.ProtocolException=ENABLE
-FDCAN1.RxBuffersNbr=2
-FDCAN1.RxFifo0ElmtsNbr=8
-FDCAN1.RxFifo1ElmtsNbr=8
-FDCAN1.StdFiltersNbr=4
-FDCAN1.TxBuffersNbr=8
-FDCAN1.TxEventsNbr=8
-FDCAN1.TxFifoQueueElmtsNbr=8
+FDCAN1.RxBuffersNbr=0
+FDCAN1.RxFifo0ElmtsNbr=4
+FDCAN1.RxFifo1ElmtsNbr=0
+FDCAN1.StdFiltersNbr=1
+FDCAN1.TxBuffersNbr=0
+FDCAN1.TxEventsNbr=0
+FDCAN1.TxFifoQueueElmtsNbr=4
+FDCAN1.TxFifoQueueMode=FDCAN_TX_FIFO_OPERATION
 FDCAN2.AutoRetransmission=ENABLE
 FDCAN2.CalculateBaudRateNominal=1000000
 FDCAN2.CalculateTimeBitNominal=1000
-FDCAN2.CalculateTimeQuantumNominal=12.5
+FDCAN2.CalculateTimeQuantumNominal=50.0
 FDCAN2.DataSyncJumpWidth=2
 FDCAN2.DataTimeSeg1=13
 FDCAN2.DataTimeSeg2=2
-FDCAN2.ExtFiltersNbr=4
-FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,AutoRetransmission,ProtocolException,NominalSyncJumpWidth,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,ExtFiltersNbr,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2,Mode
+FDCAN2.ExtFiltersNbr=0
+FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,AutoRetransmission,ProtocolException,NominalSyncJumpWidth,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,ExtFiltersNbr,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2,Mode,MessageRAMOffset
+FDCAN2.MessageRAMOffset=0x406
 FDCAN2.Mode=FDCAN_MODE_NORMAL
 FDCAN2.NominalPrescaler=1
 FDCAN2.NominalSyncJumpWidth=20
-FDCAN2.NominalTimeSeg1=59
-FDCAN2.NominalTimeSeg2=20
+FDCAN2.NominalTimeSeg1=14
+FDCAN2.NominalTimeSeg2=5
 FDCAN2.ProtocolException=ENABLE
-FDCAN2.RxBuffersNbr=2
-FDCAN2.RxFifo0ElmtsNbr=8
-FDCAN2.RxFifo1ElmtsNbr=8
-FDCAN2.StdFiltersNbr=4
-FDCAN2.TxBuffersNbr=8
-FDCAN2.TxEventsNbr=8
-FDCAN2.TxFifoQueueElmtsNbr=8
+FDCAN2.RxBuffersNbr=0
+FDCAN2.RxFifo0ElmtsNbr=4
+FDCAN2.RxFifo1ElmtsNbr=0
+FDCAN2.StdFiltersNbr=1
+FDCAN2.TxBuffersNbr=0
+FDCAN2.TxEventsNbr=0
+FDCAN2.TxFifoQueueElmtsNbr=4
 FDCAN3.AutoRetransmission=DISABLE
 FDCAN3.CalculateBaudRateNominal=1000000
 FDCAN3.CalculateTimeBitNominal=1000
-FDCAN3.CalculateTimeQuantumNominal=12.5
+FDCAN3.CalculateTimeQuantumNominal=50.0
 FDCAN3.DataSyncJumpWidth=2
 FDCAN3.DataTimeSeg1=13
 FDCAN3.DataTimeSeg2=2
 FDCAN3.ExtFiltersNbr=4
-FDCAN3.IPParameters=CalculateTimeQuantumNominal,CalculateBaudRateNominal,AutoRetransmission,ProtocolException,NominalSyncJumpWidth,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,ExtFiltersNbr,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalPrescaler,CalculateTimeBitNominal,NominalTimeSeg1,NominalTimeSeg2,Mode
+FDCAN3.IPParameters=CalculateTimeQuantumNominal,CalculateBaudRateNominal,AutoRetransmission,ProtocolException,NominalSyncJumpWidth,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,StdFiltersNbr,ExtFiltersNbr,RxFifo0ElmtsNbr,RxFifo1ElmtsNbr,RxBuffersNbr,TxEventsNbr,TxBuffersNbr,TxFifoQueueElmtsNbr,NominalPrescaler,CalculateTimeBitNominal,NominalTimeSeg1,NominalTimeSeg2,Mode,MessageRAMOffset
+FDCAN3.MessageRAMOffset=0
 FDCAN3.Mode=FDCAN_MODE_NORMAL
 FDCAN3.NominalPrescaler=1
 FDCAN3.NominalSyncJumpWidth=20
-FDCAN3.NominalTimeSeg1=59
-FDCAN3.NominalTimeSeg2=20
+FDCAN3.NominalTimeSeg1=14
+FDCAN3.NominalTimeSeg2=5
 FDCAN3.ProtocolException=DISABLE
 FDCAN3.RxBuffersNbr=2
 FDCAN3.RxFifo0ElmtsNbr=8
@@ -288,10 +291,6 @@ I2C1.CustomTiming=Disabled
 I2C1.I2C_Speed_Mode=I2C_Fast
 I2C1.IPParameters=Timing,CustomTiming,I2C_Speed_Mode
 I2C1.Timing=0x00B03FDB
-IWDG1.IPParameters=Prescaler,Window,Reload
-IWDG1.Prescaler=IWDG_PRESCALER_256
-IWDG1.Reload=4000
-IWDG1.Window=4000
 KeepUserPlacement=false
 MMTAppReg1.MEMORYMAP.AppRegionName=DTCMRAM
 MMTAppReg1.MEMORYMAP.ContextName=Cortex-M7NS
@@ -351,23 +350,22 @@ Mcu.Family=STM32H7
 Mcu.IP0=ADC1
 Mcu.IP1=ADC3
 Mcu.IP10=I2C1
-Mcu.IP11=IWDG1
-Mcu.IP12=MEMORYMAP
-Mcu.IP13=NVIC
-Mcu.IP14=RCC
-Mcu.IP15=SPI2
-Mcu.IP16=SPI6
-Mcu.IP17=SYS
-Mcu.IP18=TIM3
-Mcu.IP19=TIM12
+Mcu.IP11=MEMORYMAP
+Mcu.IP12=NVIC
+Mcu.IP13=RCC
+Mcu.IP14=SPI2
+Mcu.IP15=SPI6
+Mcu.IP16=SYS
+Mcu.IP17=TIM3
+Mcu.IP18=TIM12
+Mcu.IP19=TIM24
 Mcu.IP2=CORTEX_M7
-Mcu.IP20=TIM24
-Mcu.IP21=UART5
-Mcu.IP22=UART7
-Mcu.IP23=USART1
-Mcu.IP24=USART10
-Mcu.IP25=USB_DEVICE
-Mcu.IP26=USB_OTG_HS
+Mcu.IP20=UART5
+Mcu.IP21=UART7
+Mcu.IP22=USART1
+Mcu.IP23=USART10
+Mcu.IP24=USB_DEVICE
+Mcu.IP25=USB_OTG_HS
 Mcu.IP3=CRC
 Mcu.IP4=DEBUG
 Mcu.IP5=DMA
@@ -375,7 +373,7 @@ Mcu.IP6=FDCAN1
 Mcu.IP7=FDCAN2
 Mcu.IP8=FDCAN3
 Mcu.IP9=FREERTOS
-Mcu.IPNb=27
+Mcu.IPNb=26
 Mcu.Name=STM32H723VGTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -413,19 +411,18 @@ Mcu.Pin37=VP_ADC3_Vref_Input
 Mcu.Pin38=VP_CRC_VS_CRC
 Mcu.Pin39=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=VP_IWDG1_VS_IWDG
-Mcu.Pin41=VP_SYS_VS_tim1
-Mcu.Pin42=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin43=VP_TIM24_VS_ClockSourceINT
-Mcu.Pin44=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
-Mcu.Pin45=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin46=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
+Mcu.Pin40=VP_SYS_VS_tim1
+Mcu.Pin41=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin42=VP_TIM24_VS_ClockSourceINT
+Mcu.Pin43=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
+Mcu.Pin44=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin45=VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2_C
 Mcu.Pin8=PC3_C
 Mcu.Pin9=PA5
-Mcu.PinsNb=47
+Mcu.PinsNb=46
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-ALGOBUILD.1.4.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -444,10 +441,8 @@ NVIC.DMA1_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA2_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:10\:0\:true\:false\:true\:true\:true\:true\:true
-NVIC.FDCAN1_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
-NVIC.FDCAN1_IT1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.FDCAN1_IT0_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.FDCAN2_IT0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.FDCAN2_IT1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.FDCAN3_IT0_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.FDCAN3_IT1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -633,7 +628,7 @@ RCC.D1PPRE=RCC_APB3_DIV2
 RCC.D2PPRE1=RCC_APB1_DIV2
 RCC.D2PPRE2=RCC_APB2_DIV2
 RCC.D3PPRE=RCC_APB4_DIV2
-RCC.DFSDMACLkFreq_Value=80000000
+RCC.DFSDMACLkFreq_Value=20000000
 RCC.DFSDMFreq_Value=120000000
 RCC.DIVM1=2
 RCC.DIVM2=2
@@ -643,14 +638,14 @@ RCC.DIVP1=1
 RCC.DIVP1Freq_Value=480000000
 RCC.DIVP2Freq_Value=96000000
 RCC.DIVP3Freq_Value=48375000
-RCC.DIVQ1=6
-RCC.DIVQ1Freq_Value=80000000
+RCC.DIVQ1=24
+RCC.DIVQ1Freq_Value=20000000
 RCC.DIVQ2Freq_Value=96000000
 RCC.DIVQ3Freq_Value=48375000
 RCC.DIVR1Freq_Value=240000000
 RCC.DIVR2Freq_Value=96000000
 RCC.DIVR3Freq_Value=48375000
-RCC.FDCANFreq_Value=80000000
+RCC.FDCANFreq_Value=20000000
 RCC.FMCFreq_Value=240000000
 RCC.FamilyName=M
 RCC.HCLK3ClockFreq_Value=240000000
@@ -659,7 +654,7 @@ RCC.HPRE=RCC_HCLK_DIV2
 RCC.HSE_VALUE=24000000
 RCC.I2C123Freq_Value=120000000
 RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVN1,DIVN2,DIVP1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6CLockSelection,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVN1,DIVN2,DIVP1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6CLockSelection,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2Mul,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=120000000
 RCC.LPTIM2Freq_Value=120000000
 RCC.LPTIM345Freq_Value=120000000
@@ -673,12 +668,12 @@ RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.QSPIFreq_Value=240000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=80000000
-RCC.SAI4AFreq_Value=80000000
-RCC.SAI4BFreq_Value=80000000
-RCC.SDMMCFreq_Value=80000000
-RCC.SPDIFRXFreq_Value=80000000
-RCC.SPI123Freq_Value=80000000
+RCC.SAI1Freq_Value=20000000
+RCC.SAI4AFreq_Value=20000000
+RCC.SAI4BFreq_Value=20000000
+RCC.SDMMCFreq_Value=20000000
+RCC.SPDIFRXFreq_Value=20000000
+RCC.SPI123Freq_Value=20000000
 RCC.SPI45Freq_Value=120000000
 RCC.SPI6CLockSelection=RCC_SPI6CLKSOURCE_HSE
 RCC.SPI6Freq_Value=24000000
@@ -686,7 +681,8 @@ RCC.SWPMI1Freq_Value=120000000
 RCC.SYSCLKFreq_VALUE=480000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.Tim1OutputFreq_Value=240000000
-RCC.Tim2OutputFreq_Value=240000000
+RCC.Tim2Mul=1
+RCC.Tim2OutputFreq_Value=120000000
 RCC.TraceFreq_Value=240000000
 RCC.USART16Freq_Value=120000000
 RCC.USART234578Freq_Value=120000000
@@ -713,7 +709,7 @@ SH.S_TIM3_CH4.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI2.CLKPhase=SPI_PHASE_2EDGE
 SPI2.CLKPolarity=SPI_POLARITY_HIGH
-SPI2.CalculateBaudRate=5.0 MBits/s
+SPI2.CalculateBaudRate=1.25 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler,CLKPolarity,CLKPhase
@@ -773,8 +769,6 @@ VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
-VP_IWDG1_VS_IWDG.Mode=IWDG_Activate
-VP_IWDG1_VS_IWDG.Signal=IWDG1_VS_IWDG
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_STMicroelectronics.X-CUBE-ALGOBUILD_VS_DSPOoLibraryJjLibrary_1.4.0_1.4.0.Mode=DSPOoLibraryJjLibrary
